--- a/_includes/archive-single-compact-team.html
+++ b/_includes/archive-single-compact-team.html
@@ -23,7 +23,7 @@
 
         <h3 class="archive__item-title" itemprop="headline">
             {% if post.personal_website %}
-            <a href="{{ post.personal_website }}">{{ title }}</a>
+            <a href="{{ post.personal_website }}">{{ post.name }}</a>
             {% endif %}
         </h3>
 
